--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ section {
 }
 
 .banner {
-    background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, 1)), url('../imagens/banner.png');
+    background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, 1)), url('../images/banner.png');
     background-size: cover;
     background-repeat: no-repeat;
     height: 600px;
@@ -74,7 +74,7 @@ section {
 }
 
 #transform-world {
-    background-image: url('../imagens/woman-code.png');
+    background-image: url('../images/woman-code.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -173,4 +173,5 @@ footer a {
 footer a:hover {
     color: #bababa;
     text-shadow: 1px 1px 1px #33a8db;
+
 }
